# karpathy

./: pyproject.toml  test_split.py  todo.md
__marimo__/session/: test_split.py.json  test_split_mo.py.json  trigram.py.json
lecture-2-makemore-pt-1/: trigram.py
lecture_1_backpropagation/: micrograd_exercises.ipynb
lecture_2_makemore_pt_1/: eval_bigram_vs_trigram.py  exercises.md  regularise_trigram.py
lecture_2_makemore_pt_1/__marimo__/session/: eval_bigram_vs_trigram.py.json  regularise_trigram.py.json  test_split.py.json
lecture_3_makemore_pt_2/: exercises.md  tune_hyperparameters.py
lecture_3_makemore_pt_2/__marimo__/session/: tune_hyperparameters.py.json
lecture_4_makemore_pt_3/: batchnorm_folding.py  exercises.md  initalise_to_zero.py
lecture_4_makemore_pt_3/__marimo__/session/: batchnorm_folding.py.json  initalise_to_zero.py.json
