[project]
name = "karpathy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.23.13",
    "matplotlib>=3.11.0",
    "polars>=1.42.1",
    "ruff>=0.15.20",
    "torch>=2.13.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "pyrefly>=1.1.0",
    "pre-commit>=3.7.0"
]

[tool.marimo.language_servers.pyrefly]
enabled = false

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.pyrefly]
exclude = ["**/*.py", ".venv", ".git", ".ruff_cache"]
strict = true
